Fixed list item mistake, worked on grid css
The h2 in the product list item was not centred so it was fixed. Added
media queries in the grid css.

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-/* CSS Document */
 
 .grid {
 	border: 1px solid pink;
@@ -7,7 +6,7 @@
 }
 
 .gutter {
-	margin: 10px;
+	padding: 10px;
 }
 
 .unit {
@@ -23,3 +22,14 @@
 	width: 50%;
 }
 
+@media only screen and (min-width: 30em) {
+	.unit-m-1-3 {
+		width: 33.3333%;
+	}
+}
+
+@media only screen and (min-width: 50em) {
+	.unit-l-1-3 {
+		width: 33.3333%;
+	}
+}
