--- a/css/media-image-object.css
+++ b/css/media-image-object.css
@@ -26,6 +26,5 @@
 }
 
 .media-body-stacked {
-	text-align: center;
 	max-width: 250px;	
 }
