--- a/css/typography.css
+++ b/css/typography.css
@@ -9,7 +9,7 @@ font-family: 'Josefin Sans', sans-serif;
 body {
 	margin: 0 2em;
     padding: 0;
-    max-width: 45rem;
+	/*max-width: 45em*/ 
 }
 
 ::selection {
